[package]
name = "carbon14"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Gabriel DeMoura <gabrielteratos@gmail.com>"]
description = "file-system forensics"
documentation = "https://docs.rs/carbon14"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/carbon14"
autoexamples = false
autobenches = false
autotests = false

[dependencies]
adler32 = { version = "1.2.0", features = ["core"] }
base64 = "0.22.1"
clap = { version = "4.5.35", features = ["derive", "unicode", "env", "string", "wrap_help"] }
copypasta = "0.10.1"
crc = "3.2.1"
diff-struct = "0.5.3"
hex = { version = "0.4.3", features = ["serde"] }
iocore = "1.0.1"
md5 = "0.7.0"
serde = { version = "1.0.219", features = ["alloc", "derive", "rc", "serde_derive"] }
serde_yaml = "0.9.34"
sha = "1.0.3"
sha2 = { version = "0.10.8", features = ["oid", "compress"] }
sha3 = { version = "0.10.8", features = ["std", "asm", "reset", "oid"] }

[[bin]]
name = "carbon14"
path = "carbon14/carbon14.rs"
bench = false
test = false

[lib]
name = "carbon14"
path = "carbon14/lib.rs"
test = false

[dev-dependencies]
k9 = "0.11.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
'cfg(tarpaulin)',
'cfg(freebsd10)',
'cfg(freebsd11)',
'cfg(freebsd12)',
] }
